coded query functions in sdEntityCore and sdScene. added test program "How_to_query" in the example folder.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,8 +4,8 @@ LIBS = -lstdc++ -lspatdif
 LIB_PATH = ../src
 PATH = ../src
 
-FILES = sdLoaderTest sdSaverTest.cpp sdDateTest.cpp sdInfoTest.cpp sdSceneTest.cpp
-TARGETS = sdLoaderTest sdSaverTest sdDateTest sdInfoTest sdSceneTest
+FILES = sdLoaderTest sdSaverTest.cpp sdDateTest.cpp sdInfoTest.cpp sdSceneTest.cpp How_to_query.cpp
+TARGETS = sdLoaderTest sdSaverTest sdDateTest sdInfoTest sdSceneTest How_to_query
 
 all: $(TARGETS)
 
@@ -25,6 +25,8 @@ sdInfoTest: sdInfoTest.cpp
 sdSceneTest: sdSceneTest.cpp
 	$(CC) $(CFLAGS) -I$(PATH) -L$(LIB_PATH) $(LIBS) -o $@ $?
 
+How_to_query: How_to_query.cpp
+	$(CC) $(CFLAGS) -I$(PATH) -L$(LIB_PATH) $(LIBS) -o $@ $?
 
 clean: 
 	rm $(TARGETS)
