imported json library

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,20 +2,29 @@
 CC = g++
 CFLAGS = -g -O3 -Wall -w -dynamiclib
 LIBS = -lstdc++
-OBJECTS = *.o
+OBJECTS = *.o *.a
 FILES = *.cpp
 EXAMPLE_DIR = ../examples
 
 TXML_PATH = ./libs/tinyxml2
 TXML_FILE = tinyxml2.cpp 
 
-all: tinyxml2.o libspatdif.dylib
+JSON_PATH = ./libs/libjson
+JSON_MAKE = makefile 
+
+all: tinyxml2.o libjson.a libspatdif.dylib
 
 tinyxml2.o : $(TXML_PATH)/$(TXML_FILES)
 	$(CC) -c $(TXML_PATH)/$(TXML_FILE)
+	
+
+libjson.a : $(JSON_PATH)/$(JSON_MAKE)
+	make -C $(JSON_PATH)
+	cp $(JSON_PATH)/$@ ./
 
 libspatdif.dylib: $(FILES)
 	$(CC) $(CFLAGS) -I$(TXML_PATH) $(LIBS) -o $@ $(FILES) $(OBJECTS)
 	cp $@ $(EXAMPLE_DIR)
 clean: 
-	rm *.dylib *.o
+	rm *.dylib *.o *.a
+	make clean -C $(JSON_PATH) 
