--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,27 +2,25 @@ CC = g++
 CFLAGS = 
 INCLUDE = ../src
 LIB_PATH = ../src
-LIBS = -lspatdif -lstdc++
-LD_LIBRARY_PATH= $(LIB_PATH)
+LIBS =  -lstdc++ -lspatdif
 TARGETS = sdDateTest sdInfoTest sdSaverTest sdLoaderTest How_to_query
 
 all: $(TARGETS)
 
 sdDateTest: sdDateTest.cpp
-	export LD_LIBRARY_PATH=$(LD_LIBRARY_PATH)
-	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) $(LIBS) -o $@ $?
+	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS)
 
 sdInfoTest: sdInfoTest.cpp
-	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) $(LIBS) -o $@ $?
+	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
 
 sdSaverTest: sdSaverTest.cpp
-	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) $(LIBS) -o $@ $?
+	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
 
 sdLoaderTest: sdLoaderTest.cpp
-	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) $(LIBS) -o $@ $? 
+	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS)  
 
 How_to_query:  How_to_query.cpp
-	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) $(LIBS) -o $@ $? 
+	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
 
 clean:
 	rm $(TARGETS)
