--- a/src/libs/libjson/makefile
+++ b/src/libs/libjson/makefile
@@ -132,7 +132,8 @@ OS=$(shell uname)
 
 # Defaults
 ifeq ($(OS), Darwin)
-	cxxflags_default = -fast -ffast-math -fexpensive-optimizations -DNDEBUG  -arch x86_64 -arch i386
+#	cxxflags_default = -fast -ffast-math -fexpensive-optimizations -DNDEBUG  -arch x86_64 -arch i386
+	cxxflags_default = -ffast-math -DNDEBUG -arch x86_64 -arch i386
 else
 	cxxflags_default = -O3 -ffast-math -fexpensive-optimizations -DNDEBUG  -arch x86_64 -arch i386
 endif
