added sdOSCMessage class

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -arch x86_64 -arch i386
 INCLUDE = ../src
 LIB_PATH = /usr/local/lib
 LIBS =  -lstdc++ -lspatdif
-TARGETS = How_to_query.out FileWithExtension.out sdConverter.out sdDateTest.out sdEventTest.out sdExtensionTest.out sdInfoTest.out sdLoaderTest.out sdOSCTest.out sdSaverTest.out sdSceneTest.out sdOSCConverterTest.out
+TARGETS = How_to_query.out FileWithExtension.out sdConverter.out sdDateTest.out sdEventTest.out sdExtensionTest.out sdInfoTest.out sdLoaderTest.out sdOSCTest.out sdSaverTest.out sdSceneTest.out sdOSCConverterTest.out sdOSCMessageTest.out
 
 all: $(TARGETS)
 
@@ -36,6 +36,9 @@ sdOSCTest.out: sdOSCTest.cpp
 
 sdOSCConverterTest.out: sdOSCConverterTest.cpp
 	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
+
+sdOSCMessageTest.out: sdOSCMessageTest.cpp
+	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS)
 
 sdSaverTest.out: sdSaverTest.cpp
 	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
