--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,9 @@ CFLAGS = -arch x86_64 -arch i386
 INCLUDE = ../src
 LIB_PATH = /usr/local/lib
 LIBS =  -lstdc++ -lspatdif
-TARGETS = How_to_query.out FileWithExtension.out sdConverter.out sdDateTest.out sdEventTest.out sdExtensionTest.out sdInfoTest.out sdLoaderTest.out sdOSCTest.out sdSaverTest.out sdSceneTest.out sdOSCConverterTest.out sdOSCMessageTest.out
+TARGETS = How_to_query.out FileWithExtension.out sdConverter.out sdDateTest.out\
+			sdEventTest.out sdExtensionTest.out sdInfoTest.out sdLoaderTest.out sdOSCResponderTest.out\
+			sdSaverTest.out sdSceneTest.out sdOSCConverterTest.out sdOSCMessageTest.out
 
 all: $(TARGETS)
 
@@ -31,7 +33,7 @@ sdInfoTest.out: sdInfoTest.cpp
 sdLoaderTest.out: sdLoaderTest.cpp
 	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
 
-sdOSCTest.out: sdOSCTest.cpp
+sdOSCResponderTest.out: sdOSCResponderTest.cpp
 	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
 
 sdOSCConverterTest.out: sdOSCConverterTest.cpp
