static library compilation in makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 UNAME := $(shell uname -s)
 CC = g++
-CFLAGS =  -g -O0 -arch x86_64 -arch i386
+CFLAGS =  -O0 -arch x86_64 -arch i386
 LIBS = -lstdc++
 OBJECTS = *.o *.a
 FILES = *.cpp
@@ -22,7 +22,7 @@ INSTALL_PATH = /usr/local/lib
 all: 
 	-@make $(UNAME)
 
-Darwin: tinyxml2.o libjson libspatdif.dylib
+Darwin: tinyxml2.o libjson libspatdif.dylib 
 	cp libspatdif.dylib ../examples
 	install_name_tool -id @loader_path/../Resources/libspatdif.dylib libspatdif.dylib
 	install_name_tool -id @loader_path/../../spatdiflib/src/libspatdif.dylib libspatdif.dylib
@@ -31,10 +31,10 @@ Darwin: tinyxml2.o libjson libspatdif.dylib
 Linux: tinyxml2.o libjson.a libspatdif.so
 	cd ../examples; make 
 
-tinyxml2.o : $(TXML_PATH)/$(TXML_FILES)
+tinyxml2.o: $(TXML_PATH)/$(TXML_FILES)
 	$(CC) $(TXML_FLAG) -c $(TXML_PATH)/$(TXML_FILE)	
 
-libjson : $(JSON_PATH)/$(JSON_MAKE)
+libjson: $(JSON_PATH)/$(JSON_MAKE)
 	make -C $(JSON_PATH)
 
 libspatdif.so: $(FILES)
@@ -42,6 +42,11 @@ libspatdif.so: $(FILES)
 
 libspatdif.dylib: $(FILES)
 	$(CC) $(CFLAGS) -o $@ -dynamiclib -flat_namespace $(LIBS) $(INCLUDE_PATH) tinyxml2.o $(JSON_OBJECT_PATH)/*.o $(FILES)
+
+# static library
+libspatdif.a: tinyxml2.o libjson $(FILES)
+	$(CC) $(CFLAGS) -c $(LIBS) $(INCLUDE_PATH) $(FILES)
+	ar rv $@ *.o $(JSON_OBJECT_PATH)/*.o
 
 install:
 	-@make install_$(UNAME)
@@ -61,6 +66,5 @@ clean_Linux:
 	cd ../examples; make clean
 
 clean_Darwin:
-	rm *.dylib *.o
-	cd ../examples; make clean
+	rm *.dylib *.o *a
 	cd ../src/libs/libjson ;make clean
