--- a/src/C/examples/Makefile
+++ b/src/C/examples/Makefile
@@ -4,12 +4,15 @@ INCLUDE = -I../ -I../..
 LIB_PATH = /usr/local/lib
 LIBS =  -lstdc++ -lspatdif
 WRAPPER = ../libspatDIFC.a
-TARGETS = sdcDateTest.out
+TARGETS = sdcDateTest.out sdcInfoTest.out
 
 
 all: $(TARGETS)
 
 sdcDateTest.out: sdcDateTest.c
+	$(CC) $(CFLAGS) $(INCLUDE) -L$(LIB_PATH) -o $@ $? $(WRAPPER) $(LIBS) 
+
+sdcInfoTest.out: sdcInfoTest.c
 	$(CC) $(CFLAGS) $(INCLUDE) -L$(LIB_PATH) -o $@ $? $(WRAPPER) $(LIBS) 
 
 clean:
