--- a/src/C/examples/Makefile
+++ b/src/C/examples/Makefile
@@ -4,7 +4,7 @@ INCLUDE = -I../ -I../..
 LIB_PATH = /usr/local/lib
 LIBS =  -lstdc++ -lspatdif
 WRAPPER = ../libspatDIFC.a
-TARGETS = sdDateTest.out sdInfoTest.out
+TARGETS = sdDateTest.out sdInfoTest.out sdSceneTest.out
 
 
 all: $(TARGETS)
@@ -13,6 +13,9 @@ sdDateTest.out: sdDateTest.c
 	$(CC) $(CFLAGS) $(INCLUDE) -L$(LIB_PATH) -o $@ $? $(WRAPPER) $(LIBS) 
 
 sdInfoTest.out: sdInfoTest.c
+	$(CC) $(CFLAGS) $(INCLUDE) -L$(LIB_PATH) -o $@ $? $(WRAPPER) $(LIBS) 
+
+sdSceneTest.out: sdSceneTest.c
 	$(CC) $(CFLAGS) $(INCLUDE) -L$(LIB_PATH) -o $@ $? $(WRAPPER) $(LIBS) 
 
 clean:
