sdLoader added, issue: copy constructor of sdSCene

--- a/src/C/examples/Makefile
+++ b/src/C/examples/Makefile
@@ -4,7 +4,7 @@ INCLUDE = -I../ -I../..
 LIB_PATH = /usr/local/lib
 LIBS =  -lstdc++ -lspatdif
 WRAPPER = ../libspatDIFC.a
-TARGETS = sdDateTest.out sdInfoTest.out sdSceneTest.out
+TARGETS = sdDateTest.out sdInfoTest.out sdSceneTest.out sdLoaderTest.out
 
 
 all: $(TARGETS)
@@ -16,6 +16,9 @@ sdInfoTest.out: sdInfoTest.c
 	$(CC) $(CFLAGS) $(INCLUDE) -L$(LIB_PATH) -o $@ $? $(WRAPPER) $(LIBS) 
 
 sdSceneTest.out: sdSceneTest.c
+	$(CC) $(CFLAGS) $(INCLUDE) -L$(LIB_PATH) -o $@ $? $(WRAPPER) $(LIBS) 
+
+sdLoaderTest.out: sdLoaderTest.c
 	$(CC) $(CFLAGS) $(INCLUDE) -L$(LIB_PATH) -o $@ $? $(WRAPPER) $(LIBS) 
 
 clean:
