separated sdEntityCore and sdEventCore to two files. the definition of descriptors and their types moved to event class in order to avoid mutual reference between two headers

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,7 +4,7 @@ INCLUDE = ../src
 LIB_PATH = /usr/local/lib
 LIBS =  -lstdc++ -lspatdif
 TARGETS = How_to_query.out FileWithExtension.out sdConverter.out sdDateTest.out\
-			sdCoreEventTest.out sdExtensionTest.out sdInfoTest.out sdLoaderTest.out sdOSCResponderTest.out\
+			sdCoreEventTest.out sdExtensionTest.out sdInfoTest.out sdLoaderTest.out sdOSCResponderTest.out sdEventTest.out\
 			sdSaverTest.out sdSceneTest.out sdOSCConverterTest.out sdOSCMessageTest.out
 
 all: $(TARGETS)
@@ -21,6 +21,9 @@ sdConverter.out: sdConverter.cpp
 
 sdDateTest.out: sdDateTest.cpp
 	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
+
+sdEventTest.out: sdEventTest.cpp
+	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS)
 
 sdCoreEventTest.out: sdCoreEventTest.cpp
 	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) -o $@ $? $(LIBS) 
