json lib warning surpressed

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,18 +1,33 @@
 CC = clang++
-CFLAGS = -arch x86_64 -arch i386 -g
+CFLAGS =  -O0 -arch i386 -arch x86_64 -g
 INCLUDE = ../src
-LIB_PATH = /usr/local/lib
-LIBS =  -lstdc++ -lspatdif
+JSON_PATH = $(INCLUDE)/libs/libjson
+JSON_CORE_PATH = $(INCLUDE)/libs/libjson/_internal/Source
+
+TXML_PATH = $(INCLUDE)/libs/tinyxml2
+TXML_FILE = tinyxml2.cpp 
+TXML_FLAG = -arch x86_64 -arch i386 #FAT
+
+LIBS =  -lstdc++
 SRC = $(shell echo *.cpp)
-TARGETS = $(basename $(SRC))
+TARGETS = sdDateTest sdInfoTest
 
-all: $(TARGETS)
+all: tinyxml2.o libjson $(TARGETS)
 
-$(TARGETS):
-	@echo "building $@"
-	$(CC) $(CFLAGS) -I$(INCLUDE) -L$(LIB_PATH) $(LIBS) -o bin/$@.out $@.cpp
+tinyxml2.o: $(TXML_PATH)/$(TXML_FILES)
+	$(CC) $(TXML_FLAG) -c $(TXML_PATH)/$(TXML_FILE)	
+
+libjson: $(JSON_PATH)/$(JSON_MAKE)
+	make -C $(JSON_PATH)
+
+sdDateTest:
+	$(CC) $(CFLAGS) -I$(INCLUDE) -I$(JSON_PATH) -I$(JSON_CORE_PATH) -I$(TXML_PATH) $(LIBS) -o $@ $@.cpp ../src/*.cpp $(JSON_PATH)/Objects_static/*.o tinyxml2.o
+
+sdInfoTest:
+	$(CC) $(CFLAGS) -I$(INCLUDE) -I$(JSON_PATH) -I$(JSON_CORE_PATH) -I$(TXML_PATH) $(LIBS) -o $@ $@.cpp ../src/*.cpp $(JSON_PATH)/Objects_static/*.o tinyxml2.o
 
 clean:
-	rm bin/*.out
-	rm -r bin/*.dSYM
+	rm $(TARGETS)
+	rm *.out
+	rm -rf *.dSYM
 	rm *.dylib
